--- a/example/index.html
+++ b/example/index.html
@@ -65,6 +65,6 @@
           margin: 0px;
       "
     ></div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
