added fav icon and make links relative.

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Browser GCode Sender Example</title>
+    <link rel="icon" type="image/png" href="./icon.png">
   </head>
   <body style="
     display: flex;
